--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang=>"pt-BR"
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Em busca da cidade perdida</title>
 </head>
+
 <body>
- <main>
-    <div class="passo ativo" id="passo-0">
-        <P>Um dia desses, dentro de um livro da biblioteca da escola, descobri uma carta antiga sobre uma cidade perdida, econdidas por riquezas e belezas naturais. Nesta carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</P>
-    <button class="btn-proximo"data proximo="1">Rio de Janeiro</button>
-     <button class="btn-proximo"data proximo="2">pernanbuco</button>
-    </div>
-    <div class="passo" id="passo-1">
-        <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-        <button class="btn-proximo"data-proximo="3">Procurar a pista no topo do pico</button>
-        <button class="btn-proximo"data-proximo="4">Desistir e voltar pra casa</button>
-         </div>
- </main>   
+    <main>
+        <div class="passo ativo" id="passo-0">
+            <P>Um dia desses, dentro de um livro da biblioteca da escola, descobri uma carta antiga sobre uma cidade
+                perdida, econdidas por riquezas e belezas naturais. Nesta carta, a autora deixa algumas pistas para
+                encontrar essa cidade e eu decidi segui-las!</P>
+            <button class="btn-proximo" data proximo="1">Rio de Janeiro</button>
+            <button class="btn-proximo" data proximo="2">pernanbuco</button>
+        </div>
+        <div class="passo" id="passo-1">
+            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a
+                primeira pista.</p>
+            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
+            <button class="btn-proximo" data-proximo="4">Desistir e voltar pra casa</button>
+        </div>
+    </main>
 </body>
+
 </html>
